--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.13
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  firebase_messaging: ^11.4.1
+  flutter_local_notifications: ^9.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
